# ice-cream-dataops

./: README.md  cdf.toml  pyproject.toml
.github/: deploy.yaml
.github/workflows/: deploy.yaml
ice-cream-dataops/: config.prod.yaml  config.test.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/: wf_icapi_data_pipeline.WorkflowVersion.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/functions/: functions.Function.yaml  schedules.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/functions/icapi_assets_extractor/: handler.py
ice-cream-dataops/modules/bootcamp/ice_cream_api/functions/icapi_timeseries_extractor/: handler.py
ice-cream-dataops/modules/bootcamp/ice_cream_api/transformations/: tr_create_asset_hierarchy.schedule.yaml  tr_create_asset_hierarchy.sql  tr_create_asset_hierarchy.yaml  tr_icapi_ts_assets_contextualization.schedule.yaml  tr_icapi_ts_assets_contextualization.sql  tr_icapi_ts_assets_contextualization.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/workflows/: wf_icapi_data_pipeline.WorkFlow.yaml  wf_icapi_data_pipeline.WorkFlowTrigger.yaml  wf_icapi_data_pipeline.WorkflowVersion.yaml
ice-cream-dataops/modules/bootcamp/use_cases/oee/functions/: schedules.Schedule.yaml
